Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4779,5 +4779,54 @@
     "TVL_TOKEN": 527534.030102,
     "SHARES": 523877.408958,
     "PPS": 1.0069799175942193
+  },
+  "2025-02-06 23:10": {
+    "LTVL": 706475.028058,
+    "TVL_USD": 527906.294062,
+    "TVL_TOKEN": 527907.4449002298,
+    "SHARES": 523877.408958,
+    "PPS": 1.0076927080139715
+  },
+  "2025-02-06 23:20": {
+    "LTVL": 706670.917628,
+    "TVL_USD": 527468.742538,
+    "TVL_TOKEN": 527470.0453890121,
+    "SHARES": 523877.408958,
+    "PPS": 1.0068577807891312
+  },
+  "2025-02-06 23:30": {
+    "LTVL": 704368.329529,
+    "TVL_USD": 527888.2103179999,
+    "TVL_TOKEN": 527888.2103179999,
+    "SHARES": 523877.408958,
+    "PPS": 1.0076559922062251
+  },
+  "2025-02-06 23:40": {
+    "LTVL": 704562.020579,
+    "TVL_USD": 527811.103902,
+    "TVL_TOKEN": 527813.0515321601,
+    "SHARES": 523877.408958,
+    "PPS": 1.0075125258445257
+  },
+  "2025-02-06 23:50": {
+    "LTVL": 704076.320171,
+    "TVL_USD": 527845.3293699999,
+    "TVL_TOKEN": 527840.5365779278,
+    "SHARES": 523877.408958,
+    "PPS": 1.0075649904961743
+  },
+  "2025-02-07 00:00": {
+    "LTVL": 704936.075627,
+    "TVL_USD": 527657.349301,
+    "TVL_TOKEN": 527658.6315114746,
+    "SHARES": 523877.408958,
+    "PPS": 1.0072177621879048
+  },
+  "2025-02-07 00:10": {
+    "LTVL": 706987.072108,
+    "TVL_USD": 527474.141134,
+    "TVL_TOKEN": 527493.6583993608,
+    "SHARES": 523877.408958,
+    "PPS": 1.006902854331042
   }
 }
