Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4828,5 +4828,12 @@
     "TVL_TOKEN": 527493.6583993608,
     "SHARES": 523877.408958,
     "PPS": 1.006902854331042
+  },
+  "2025-02-07 00:20": {
+    "LTVL": 707477.465594,
+    "TVL_USD": 527634.260989,
+    "TVL_TOKEN": 527644.9932881634,
+    "SHARES": 523877.408958,
+    "PPS": 1.0071917289536443
   }
 }
