Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4835,5 +4835,54 @@
     "TVL_TOKEN": 527644.9932881634,
     "SHARES": 523877.408958,
     "PPS": 1.0071917289536443
+  },
+  "2025-02-07 00:30": {
+    "LTVL": 708408.502057,
+    "TVL_USD": 527800.293866,
+    "TVL_TOKEN": 527814.280944445,
+    "SHARES": 523877.408958,
+    "PPS": 1.0075148726002052
+  },
+  "2025-02-07 00:40": {
+    "LTVL": 708183.376745,
+    "TVL_USD": 528083.8773919999,
+    "TVL_TOKEN": 528097.0851000983,
+    "SHARES": 523877.408958,
+    "PPS": 1.0080547014815762
+  },
+  "2025-02-07 00:50": {
+    "LTVL": 706047.269156,
+    "TVL_USD": 527953.75781,
+    "TVL_TOKEN": 527953.7736486132,
+    "SHARES": 523877.408958,
+    "PPS": 1.007781142345346
+  },
+  "2025-02-07 01:00": {
+    "LTVL": 705338.002942,
+    "TVL_USD": 527370.964002,
+    "TVL_TOKEN": 527365.795817201,
+    "SHARES": 523877.408958,
+    "PPS": 1.0066587846689925
+  },
+  "2025-02-07 01:10": {
+    "LTVL": 706736.832994,
+    "TVL_USD": 527689.650549,
+    "TVL_TOKEN": 527685.4343423796,
+    "SHARES": 523877.408958,
+    "PPS": 1.0072689245981303
+  },
+  "2025-02-07 01:20": {
+    "LTVL": 706436.061935,
+    "TVL_USD": 527306.7560060001,
+    "TVL_TOKEN": 527304.1353044476,
+    "SHARES": 523877.408958,
+    "PPS": 1.006541084398473
+  },
+  "2025-02-07 01:30": {
+    "LTVL": 706880.527643,
+    "TVL_USD": 527270.743039,
+    "TVL_TOKEN": 527268.1172437761,
+    "SHARES": 523877.408958,
+    "PPS": 1.006472331556576
   }
 }
