Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4884,5 +4884,26 @@
     "TVL_TOKEN": 527268.1172437761,
     "SHARES": 523877.408958,
     "PPS": 1.006472331556576
+  },
+  "2025-02-07 01:40": {
+    "LTVL": 707370.290208,
+    "TVL_USD": 527750.5041939999,
+    "TVL_TOKEN": 527745.2267417324,
+    "SHARES": 523877.408958,
+    "PPS": 1.007383058932481
+  },
+  "2025-02-07 01:50": {
+    "LTVL": 707024.010292,
+    "TVL_USD": 527583.819928,
+    "TVL_TOKEN": 527583.819928,
+    "SHARES": 523877.408958,
+    "PPS": 1.0070749585811918
+  },
+  "2025-02-07 02:00": {
+    "LTVL": 709525.040691,
+    "TVL_USD": 527520.428287,
+    "TVL_TOKEN": 527519.7899880542,
+    "SHARES": 523877.408958,
+    "PPS": 1.0069527354449181
   }
 }
