Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4905,5 +4905,33 @@
     "TVL_TOKEN": 527519.7899880542,
     "SHARES": 523877.408958,
     "PPS": 1.0069527354449181
+  },
+  "2025-02-07 02:10": {
+    "LTVL": 711593.846997,
+    "TVL_USD": 528395.209469,
+    "TVL_TOKEN": 528393.5186097404,
+    "SHARES": 523877.408958,
+    "PPS": 1.008620546667059
+  },
+  "2025-02-07 02:20": {
+    "LTVL": 712450.638746,
+    "TVL_USD": 527008.3162679999,
+    "TVL_TOKEN": 527007.0303708458,
+    "SHARES": 523877.408958,
+    "PPS": 1.005973957569712
+  },
+  "2025-02-07 02:30": {
+    "LTVL": 712915.12243,
+    "TVL_USD": 528190.273411,
+    "TVL_TOKEN": 528190.2575652923,
+    "SHARES": 523877.408958,
+    "PPS": 1.008232553138473
+  },
+  "2025-02-07 02:40": {
+    "LTVL": 712479.8261,
+    "TVL_USD": 528042.423447,
+    "TVL_TOKEN": 528042.4181665758,
+    "SHARES": 523877.408958,
+    "PPS": 1.0079503508594885
   }
 }
