Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4933,5 +4933,54 @@
     "TVL_TOKEN": 528042.4181665758,
     "SHARES": 523877.408958,
     "PPS": 1.0079503508594885
+  },
+  "2025-02-07 02:50": {
+    "LTVL": 712790.465623,
+    "TVL_USD": 527657.122201,
+    "TVL_TOKEN": 527655.4231505374,
+    "SHARES": 523877.408958,
+    "PPS": 1.0072116379289038
+  },
+  "2025-02-07 03:00": {
+    "LTVL": 713190.208773,
+    "TVL_USD": 527525.037078,
+    "TVL_TOKEN": 527525.4960251816,
+    "SHARES": 523877.408958,
+    "PPS": 1.0069636273769424
+  },
+  "2025-02-07 03:10": {
+    "LTVL": 714409.457888,
+    "TVL_USD": 528147.7725069999,
+    "TVL_TOKEN": 528143.7058004652,
+    "SHARES": 523877.408958,
+    "PPS": 1.0081436931036039
+  },
+  "2025-02-07 03:20": {
+    "LTVL": 713686.808,
+    "TVL_USD": 528459.226353,
+    "TVL_TOKEN": 528457.5669962397,
+    "SHARES": 523877.408958,
+    "PPS": 1.008742805014917
+  },
+  "2025-02-07 03:30": {
+    "LTVL": 712694.230973,
+    "TVL_USD": 528357.752214,
+    "TVL_TOKEN": 528355.4591513072,
+    "SHARES": 523877.408958,
+    "PPS": 1.0085478971162627
+  },
+  "2025-02-07 03:40": {
+    "LTVL": 710973.639615,
+    "TVL_USD": 528038.689409,
+    "TVL_TOKEN": 528034.9931640478,
+    "SHARES": 523877.408958,
+    "PPS": 1.0079361776914895
+  },
+  "2025-02-07 03:50": {
+    "LTVL": 711029.652415,
+    "TVL_USD": 527920.829934,
+    "TVL_TOKEN": 527939.8463272648,
+    "SHARES": 523877.408958,
+    "PPS": 1.007754557268169
   }
 }
