Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4982,5 +4982,12 @@
     "TVL_TOKEN": 527939.8463272648,
     "SHARES": 523877.408958,
     "PPS": 1.007754557268169
+  },
+  "2025-02-07 04:00": {
+    "LTVL": 711034.991043,
+    "TVL_USD": 527788.7516150001,
+    "TVL_TOKEN": 527808.8083497174,
+    "SHARES": 523877.408958,
+    "PPS": 1.0075044262731943
   }
 }
