Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4989,5 +4989,19 @@
     "TVL_TOKEN": 527808.8083497174,
     "SHARES": 523877.408958,
     "PPS": 1.0075044262731943
+  },
+  "2025-02-07 04:10": {
+    "LTVL": 713141.544124,
+    "TVL_USD": 528086.23788,
+    "TVL_TOKEN": 528109.9341727464,
+    "SHARES": 523877.408958,
+    "PPS": 1.0080792283507032
+  },
+  "2025-02-07 04:20": {
+    "LTVL": 713246.474294,
+    "TVL_USD": 527622.2036250001,
+    "TVL_TOKEN": 527645.4041934225,
+    "SHARES": 523877.408958,
+    "PPS": 1.0071925133074875
   }
 }
