Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -5003,5 +5003,40 @@
     "TVL_TOKEN": 527645.4041934225,
     "SHARES": 523877.408958,
     "PPS": 1.0071925133074875
+  },
+  "2025-02-07 04:30": {
+    "LTVL": 713898.724852,
+    "TVL_USD": 528089.372104,
+    "TVL_TOKEN": 528110.8398096382,
+    "SHARES": 523877.408958,
+    "PPS": 1.0080809570698201
+  },
+  "2025-02-07 04:40": {
+    "LTVL": 713792.023251,
+    "TVL_USD": 528090.265834,
+    "TVL_TOKEN": 528108.9978601541,
+    "SHARES": 523877.408958,
+    "PPS": 1.008077441076474
+  },
+  "2025-02-07 04:50": {
+    "LTVL": 712233.018655,
+    "TVL_USD": 527941.116493,
+    "TVL_TOKEN": 527947.673603106,
+    "SHARES": 523877.408958,
+    "PPS": 1.0077694983129772
+  },
+  "2025-02-07 05:00": {
+    "LTVL": 710194.226578,
+    "TVL_USD": 525731.18591,
+    "TVL_TOKEN": 525731.2437404369,
+    "SHARES": 523877.408958,
+    "PPS": 1.0035386805209336
+  },
+  "2025-02-07 05:10": {
+    "LTVL": 710201.401347,
+    "TVL_USD": 526365.559154,
+    "TVL_TOKEN": 526375.8498018637,
+    "SHARES": 523877.408958,
+    "PPS": 1.0047691326274846
   }
 }
