Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -5038,5 +5038,12 @@
     "TVL_TOKEN": 526375.8498018637,
     "SHARES": 523877.408958,
     "PPS": 1.0047691326274846
+  },
+  "2025-02-07 05:20": {
+    "LTVL": 710051.832741,
+    "TVL_USD": 526384.953642,
+    "TVL_TOKEN": 526387.9014142479,
+    "SHARES": 523877.408958,
+    "PPS": 1.0047921372697504
   }
 }
