--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -5045,5 +5045,26 @@
     "TVL_TOKEN": 526387.9014142479,
     "SHARES": 523877.408958,
     "PPS": 1.0047921372697504
+  },
+  "2025-02-07 05:30": {
+    "LTVL": 708928.905916,
+    "TVL_USD": 526693.551437,
+    "TVL_TOKEN": 526705.1336828897,
+    "SHARES": 523877.408958,
+    "PPS": 1.0053976840316785
+  },
+  "2025-02-07 05:40": {
+    "LTVL": 709434.614664,
+    "TVL_USD": 526315.717931,
+    "TVL_TOKEN": 526330.3920223296,
+    "SHARES": 523877.408958,
+    "PPS": 1.0046823608393587
+  },
+  "2025-02-07 05:50": {
+    "LTVL": 710182.744036,
+    "TVL_USD": 527645.889291,
+    "TVL_TOKEN": 527660.6057452942,
+    "SHARES": 523877.408958,
+    "PPS": 1.0072215306913483
   }
 }
