Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47358,5 +47358,50 @@
     "PPS": 1.0072962675876518,
     "VAULT_PNL_SPOT": 3392.174866999965,
     "FUEL": 915258
+  },
+  "2025-03-17 01:10": {
+    "LTVL": 590893.72915,
+    "TVL_USD": 512046.55452,
+    "TVL_TOKEN": 512096.0178743665,
+    "SHARES": 508428.675257,
+    "PPS": 1.0072130916209883,
+    "VAULT_PNL_SPOT": 3476.0756519999704,
+    "FUEL": 915258
+  },
+  "2025-03-17 01:20": {
+    "LTVL": 589861.511636,
+    "TVL_USD": 512032.535541,
+    "TVL_TOKEN": 512068.5083537119,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071589846793594,
+    "VAULT_PNL_SPOT": 3476.0756519999704,
+    "FUEL": 915258
+  },
+  "2025-03-17 01:30": {
+    "LTVL": 590413.851988,
+    "TVL_USD": 511923.65812200005,
+    "TVL_TOKEN": 511960.01240248076,
+    "SHARES": 508428.675257,
+    "PPS": 1.0069455900450457,
+    "VAULT_PNL_SPOT": 3476.0756519999704,
+    "FUEL": 915258
+  },
+  "2025-03-17 01:40": {
+    "LTVL": 591514.803389,
+    "TVL_USD": 512254.289851,
+    "TVL_TOKEN": 512306.37604025204,
+    "SHARES": 508428.675257,
+    "PPS": 1.0076268333631888,
+    "VAULT_PNL_SPOT": 3198.818482999981,
+    "FUEL": 915258
+  },
+  "2025-03-17 01:50": {
+    "LTVL": 592523.56777,
+    "TVL_USD": 512395.539186,
+    "TVL_TOKEN": 512437.28745180875,
+    "SHARES": 508428.675257,
+    "PPS": 1.0078843157160293,
+    "VAULT_PNL_SPOT": 3198.818482999981,
+    "FUEL": 915258
   }
 }
