Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47403,5 +47403,50 @@
     "PPS": 1.0078843157160293,
     "VAULT_PNL_SPOT": 3198.818482999981,
     "FUEL": 915258
+  },
+  "2025-03-17 02:00": {
+    "LTVL": 592416.574767,
+    "TVL_USD": 512320.267422,
+    "TVL_TOKEN": 512362.2042684194,
+    "SHARES": 508428.675257,
+    "PPS": 1.0077366387909397,
+    "VAULT_PNL_SPOT": 3198.818482999981,
+    "FUEL": 915258
+  },
+  "2025-03-17 02:10": {
+    "LTVL": 592031.922728,
+    "TVL_USD": 512173.24491300003,
+    "TVL_TOKEN": 512211.589072558,
+    "SHARES": 508428.675257,
+    "PPS": 1.0074404021638743,
+    "VAULT_PNL_SPOT": 3686.190004999982,
+    "FUEL": 915258
+  },
+  "2025-03-17 02:20": {
+    "LTVL": 591572.257209,
+    "TVL_USD": 512121.757571,
+    "TVL_TOKEN": 512158.3256754533,
+    "SHARES": 508428.675257,
+    "PPS": 1.0073356413592685,
+    "VAULT_PNL_SPOT": 3686.190004999982,
+    "FUEL": 915258
+  },
+  "2025-03-17 02:40": {
+    "LTVL": 592315.351299,
+    "TVL_USD": 512464.898567,
+    "TVL_TOKEN": 512506.45259017596,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080203527684874,
+    "VAULT_PNL_SPOT": 3638.258984999964,
+    "FUEL": 915258
+  },
+  "2025-03-17 02:50": {
+    "LTVL": 591033.519992,
+    "TVL_USD": 512214.915071,
+    "TVL_TOKEN": 512255.9826331277,
+    "SHARES": 508428.675257,
+    "PPS": 1.0075277173817805,
+    "VAULT_PNL_SPOT": 3638.258984999964,
+    "FUEL": 915258
   }
 }
