Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47448,5 +47448,59 @@
     "PPS": 1.0075277173817805,
     "VAULT_PNL_SPOT": 3638.258984999964,
     "FUEL": 915258
+  },
+  "2025-03-17 03:00": {
+    "LTVL": 591716.249277,
+    "TVL_USD": 512146.588861,
+    "TVL_TOKEN": 512191.0265544639,
+    "SHARES": 508428.675257,
+    "PPS": 1.0073999588940614,
+    "VAULT_PNL_SPOT": 3638.258984999964,
+    "FUEL": 915258
+  },
+  "2025-03-17 03:10": {
+    "LTVL": 592688.885346,
+    "TVL_USD": 512562.086466,
+    "TVL_TOKEN": 512606.5550846536,
+    "SHARES": 508428.675257,
+    "PPS": 1.00821723878092,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 915258
+  },
+  "2025-03-17 03:20": {
+    "LTVL": 592566.172706,
+    "TVL_USD": 512427.997674,
+    "TVL_TOKEN": 512472.1932759481,
+    "SHARES": 508428.675257,
+    "PPS": 1.007952970034399,
+    "VAULT_PNL_SPOT": 2942.2145129999844,
+    "FUEL": 915258
+  },
+  "2025-03-17 03:30": {
+    "LTVL": 592401.798976,
+    "TVL_USD": 512248.93188499997,
+    "TVL_TOKEN": 512289.9150782062,
+    "SHARES": 508428.675257,
+    "PPS": 1.0075944572151727,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 915258
+  },
+  "2025-03-17 03:40": {
+    "LTVL": 592827.023664,
+    "TVL_USD": 512081.51810499997,
+    "TVL_TOKEN": 512115.66597760736,
+    "SHARES": 508428.675257,
+    "PPS": 1.0072517363792348,
+    "VAULT_PNL_SPOT": 3625.8169139999663,
+    "FUEL": 915258
+  },
+  "2025-03-17 03:50": {
+    "LTVL": 593460.774672,
+    "TVL_USD": 512182.040266,
+    "TVL_TOKEN": 512214.6683403733,
+    "SHARES": 508428.675257,
+    "PPS": 1.0074464586039715,
+    "VAULT_PNL_SPOT": 3625.8169139999663,
+    "FUEL": 915258
   }
 }
