Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47502,5 +47502,23 @@
     "PPS": 1.0074464586039715,
     "VAULT_PNL_SPOT": 3625.8169139999663,
     "FUEL": 915258
+  },
+  "2025-03-17 04:00": {
+    "LTVL": 594274.461739,
+    "TVL_USD": 512261.098657,
+    "TVL_TOKEN": 512302.0725767647,
+    "SHARES": 508428.675257,
+    "PPS": 1.007618369120913,
+    "VAULT_PNL_SPOT": 3625.8169139999663,
+    "FUEL": 915258
+  },
+  "2025-03-17 04:10": {
+    "LTVL": 594378.899744,
+    "TVL_USD": 512469.88094199996,
+    "TVL_TOKEN": 512516.1919051005,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080395084837304,
+    "VAULT_PNL_SPOT": 3677.3584909999627,
+    "FUEL": 915258
   }
 }
