--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47520,5 +47520,14 @@
     "PPS": 1.0080395084837304,
     "VAULT_PNL_SPOT": 3677.3584909999627,
     "FUEL": 915258
+  },
+  "2025-03-17 04:20": {
+    "LTVL": 594106.072752,
+    "TVL_USD": 511903.078432,
+    "TVL_TOKEN": 511945.01696778997,
+    "SHARES": 508428.675257,
+    "PPS": 1.0069160963610333,
+    "VAULT_PNL_SPOT": 3677.3584909999627,
+    "FUEL": 915258
   }
 }
