Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47529,5 +47529,23 @@
     "PPS": 1.0069160963610333,
     "VAULT_PNL_SPOT": 3677.3584909999627,
     "FUEL": 915258
+  },
+  "2025-03-17 04:30": {
+    "LTVL": 593930.407832,
+    "TVL_USD": 512156.90098800004,
+    "TVL_TOKEN": 512198.24563038733,
+    "SHARES": 508428.675257,
+    "PPS": 1.0074141576917979,
+    "VAULT_PNL_SPOT": 3677.3584909999627,
+    "FUEL": 915258
+  },
+  "2025-03-17 04:40": {
+    "LTVL": 593904.630042,
+    "TVL_USD": 512397.535014,
+    "TVL_TOKEN": 512445.20779168094,
+    "SHARES": 508428.675257,
+    "PPS": 1.0078998937907084,
+    "VAULT_PNL_SPOT": 3527.474132000003,
+    "FUEL": 915258
   }
 }
