Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47547,5 +47547,50 @@
     "PPS": 1.0078998937907084,
     "VAULT_PNL_SPOT": 3527.474132000003,
     "FUEL": 915258
+  },
+  "2025-03-17 04:50": {
+    "LTVL": 593715.376287,
+    "TVL_USD": 512328.388311,
+    "TVL_TOKEN": 512379.8107488068,
+    "SHARES": 508428.675257,
+    "PPS": 1.0077712679950823,
+    "VAULT_PNL_SPOT": 3527.474132000003,
+    "FUEL": 915258
+  },
+  "2025-03-17 05:00": {
+    "LTVL": 593669.029337,
+    "TVL_USD": 512159.444098,
+    "TVL_TOKEN": 512212.19683215173,
+    "SHARES": 508428.675257,
+    "PPS": 1.007441597532317,
+    "VAULT_PNL_SPOT": 3527.474132000003,
+    "FUEL": 915258
+  },
+  "2025-03-17 05:10": {
+    "LTVL": 592711.324779,
+    "TVL_USD": 511932.439,
+    "TVL_TOKEN": 511975.4398171903,
+    "SHARES": 508428.675257,
+    "PPS": 1.0069759333664599,
+    "VAULT_PNL_SPOT": 3688.1114330000128,
+    "FUEL": 915258
+  },
+  "2025-03-17 05:20": {
+    "LTVL": 592155.352051,
+    "TVL_USD": 511495.515622,
+    "TVL_TOKEN": 511541.19625082513,
+    "SHARES": 508428.675257,
+    "PPS": 1.006121843918917,
+    "VAULT_PNL_SPOT": 3688.1114330000128,
+    "FUEL": 915258
+  },
+  "2025-03-17 05:30": {
+    "LTVL": 592612.864522,
+    "TVL_USD": 512207.76248699997,
+    "TVL_TOKEN": 512259.3418801339,
+    "SHARES": 508428.675257,
+    "PPS": 1.00753432449733,
+    "VAULT_PNL_SPOT": 3688.1114330000128,
+    "FUEL": 915258
   }
 }
