Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47592,5 +47592,32 @@
     "PPS": 1.00753432449733,
     "VAULT_PNL_SPOT": 3688.1114330000128,
     "FUEL": 915258
+  },
+  "2025-03-17 05:40": {
+    "LTVL": 592255.568115,
+    "TVL_USD": 511715.443318,
+    "TVL_TOKEN": 511766.2617077876,
+    "SHARES": 508428.675257,
+    "PPS": 1.006564512611529,
+    "VAULT_PNL_SPOT": 3670.567144999979,
+    "FUEL": 915258
+  },
+  "2025-03-17 05:50": {
+    "LTVL": 591716.309717,
+    "TVL_USD": 511818.721006,
+    "TVL_TOKEN": 511864.59431094216,
+    "SHARES": 508428.675257,
+    "PPS": 1.006757917523447,
+    "VAULT_PNL_SPOT": 3670.567144999979,
+    "FUEL": 915258
+  },
+  "2025-03-17 06:00": {
+    "LTVL": 591409.798242,
+    "TVL_USD": 512025.459486,
+    "TVL_TOKEN": 512068.99047087994,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071599329287235,
+    "VAULT_PNL_SPOT": 3670.567144999979,
+    "FUEL": 915258
   }
 }
