Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47619,5 +47619,14 @@
     "PPS": 1.0071599329287235,
     "VAULT_PNL_SPOT": 3670.567144999979,
     "FUEL": 915258
+  },
+  "2025-03-17 06:10": {
+    "LTVL": 591687.152197,
+    "TVL_USD": 512057.21550000005,
+    "TVL_TOKEN": 512103.50965727307,
+    "SHARES": 508428.675257,
+    "PPS": 1.0072278267908779,
+    "VAULT_PNL_SPOT": 3208.864608999982,
+    "FUEL": 915258
   }
 }
