Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47628,5 +47628,68 @@
     "PPS": 1.0072278267908779,
     "VAULT_PNL_SPOT": 3208.864608999982,
     "FUEL": 915258
+  },
+  "2025-03-17 06:20": {
+    "LTVL": 590922.940754,
+    "TVL_USD": 512396.475522,
+    "TVL_TOKEN": 512447.73566899897,
+    "SHARES": 508428.675257,
+    "PPS": 1.0079048657315943,
+    "VAULT_PNL_SPOT": 3208.864608999982,
+    "FUEL": 915258
+  },
+  "2025-03-17 06:30": {
+    "LTVL": 589147.686352,
+    "TVL_USD": 511962.225426,
+    "TVL_TOKEN": 512005.75103489554,
+    "SHARES": 508428.675257,
+    "PPS": 1.0070355508097324,
+    "VAULT_PNL_SPOT": 3208.864608999982,
+    "FUEL": 915258
+  },
+  "2025-03-17 06:40": {
+    "LTVL": 589929.055447,
+    "TVL_USD": 512131.563638,
+    "TVL_TOKEN": 512177.2600931455,
+    "SHARES": 508428.675257,
+    "PPS": 1.00737288240922,
+    "VAULT_PNL_SPOT": 3316.4264100000146,
+    "FUEL": 915258
+  },
+  "2025-03-17 06:50": {
+    "LTVL": 591282.428344,
+    "TVL_USD": 512121.258102,
+    "TVL_TOKEN": 512175.0262362543,
+    "SHARES": 508428.675257,
+    "PPS": 1.0073684887607108,
+    "VAULT_PNL_SPOT": 3316.4264100000146,
+    "FUEL": 915258
+  },
+  "2025-03-17 07:00": {
+    "LTVL": 591223.182171,
+    "TVL_USD": 511891.011276,
+    "TVL_TOKEN": 511933.43008001643,
+    "SHARES": 508428.675257,
+    "PPS": 1.0068933067578159,
+    "VAULT_PNL_SPOT": 3316.4264100000146,
+    "FUEL": 915258
+  },
+  "2025-03-17 07:10": {
+    "LTVL": 592969.976608,
+    "TVL_USD": 511773.42958,
+    "TVL_TOKEN": 511837.5781836738,
+    "SHARES": 508428.675257,
+    "PPS": 1.0067047810097467,
+    "VAULT_PNL_SPOT": 2773.4484400000074,
+    "FUEL": 915258
+  },
+  "2025-03-17 07:20": {
+    "LTVL": 592479.184901,
+    "TVL_USD": 512428.380802,
+    "TVL_TOKEN": 512493.98003144405,
+    "SHARES": 508428.675257,
+    "PPS": 1.0079958211884668,
+    "VAULT_PNL_SPOT": 2773.4484400000074,
+    "FUEL": 915258
   }
 }
