Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47691,5 +47691,23 @@
     "PPS": 1.0079958211884668,
     "VAULT_PNL_SPOT": 2773.4484400000074,
     "FUEL": 915258
+  },
+  "2025-03-17 07:30": {
+    "LTVL": 592991.720074,
+    "TVL_USD": 511964.599529,
+    "TVL_TOKEN": 512035.88516493264,
+    "SHARES": 508428.675257,
+    "PPS": 1.0070948199491487,
+    "VAULT_PNL_SPOT": 2773.4484400000074,
+    "FUEL": 915258
+  },
+  "2025-03-17 07:40": {
+    "LTVL": 593584.096005,
+    "TVL_USD": 512521.23474600003,
+    "TVL_TOKEN": 512575.3883357777,
+    "SHARES": 508428.675257,
+    "PPS": 1.0081559386411114,
+    "VAULT_PNL_SPOT": 3504.0193112900597,
+    "FUEL": 915258
   }
 }
