Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47709,5 +47709,14 @@
     "PPS": 1.0081559386411114,
     "VAULT_PNL_SPOT": 3504.0193112900597,
     "FUEL": 915258
+  },
+  "2025-03-17 07:50": {
+    "LTVL": 594319.971424,
+    "TVL_USD": 512282.795425,
+    "TVL_TOKEN": 512349.17538416275,
+    "SHARES": 508428.675257,
+    "PPS": 1.0077110130052775,
+    "VAULT_PNL_SPOT": 3504.0193112900597,
+    "FUEL": 915258
   }
 }
