Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47718,5 +47718,23 @@
     "PPS": 1.0077110130052775,
     "VAULT_PNL_SPOT": 3504.0193112900597,
     "FUEL": 915258
+  },
+  "2025-03-17 08:00": {
+    "LTVL": 594294.741827,
+    "TVL_USD": 512435.674146,
+    "TVL_TOKEN": 512501.6997399775,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080110046525574,
+    "VAULT_PNL_SPOT": 3504.0193112900597,
+    "FUEL": 915258
+  },
+  "2025-03-17 08:10": {
+    "LTVL": 593513.679403,
+    "TVL_USD": 512259.902638,
+    "TVL_TOKEN": 512325.7057516468,
+    "SHARES": 508428.675257,
+    "PPS": 1.007664851894274,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 915258
   }
 }
