Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47736,5 +47736,32 @@
     "PPS": 1.007664851894274,
     "VAULT_PNL_SPOT": 0.0012450000000008288,
     "FUEL": 915258
+  },
+  "2025-03-17 08:20": {
+    "LTVL": 592681.836814,
+    "TVL_USD": 512211.291662,
+    "TVL_TOKEN": 512272.76951706974,
+    "SHARES": 508428.675257,
+    "PPS": 1.0075607345673936,
+    "VAULT_PNL_SPOT": 4026.9945759896655,
+    "FUEL": 915258
+  },
+  "2025-03-17 08:30": {
+    "LTVL": 594318.546122,
+    "TVL_USD": 512598.940944,
+    "TVL_TOKEN": 512659.8910784503,
+    "SHARES": 508428.675257,
+    "PPS": 1.00832214237191,
+    "VAULT_PNL_SPOT": 4026.9945759896655,
+    "FUEL": 915258
+  },
+  "2025-03-17 08:40": {
+    "LTVL": 593726.588089,
+    "TVL_USD": 512523.829021,
+    "TVL_TOKEN": 512578.73132891266,
+    "SHARES": 508428.675257,
+    "PPS": 1.0081625137878285,
+    "VAULT_PNL_SPOT": 4026.9945759896655,
+    "FUEL": 915258
   }
 }
