Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47763,5 +47763,14 @@
     "PPS": 1.0081625137878285,
     "VAULT_PNL_SPOT": 4026.9945759896655,
     "FUEL": 915258
+  },
+  "2025-03-17 08:50": {
+    "LTVL": 593818.334966,
+    "TVL_USD": 512475.172242,
+    "TVL_TOKEN": 512526.58378361934,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080599476899055,
+    "VAULT_PNL_SPOT": 4026.9945759896655,
+    "FUEL": 915258
   }
 }
