Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47772,5 +47772,68 @@
     "PPS": 1.0080599476899055,
     "VAULT_PNL_SPOT": 4026.9945759896655,
     "FUEL": 915258
+  },
+  "2025-03-17 09:00": {
+    "LTVL": 593762.805383,
+    "TVL_USD": 512303.50810499996,
+    "TVL_TOKEN": 512350.1370909766,
+    "SHARES": 508428.675257,
+    "PPS": 1.0077129045327633,
+    "VAULT_PNL_SPOT": 4026.9945759896655,
+    "FUEL": 915258
+  },
+  "2025-03-17 09:10": {
+    "LTVL": 593356.093734,
+    "TVL_USD": 512403.02089700004,
+    "TVL_TOKEN": 512446.58910600585,
+    "SHARES": 508428.675257,
+    "PPS": 1.007902610620801,
+    "VAULT_PNL_SPOT": 3531.8018220000085,
+    "FUEL": 920978
+  },
+  "2025-03-17 09:20": {
+    "LTVL": 593981.787096,
+    "TVL_USD": 512140.884209,
+    "TVL_TOKEN": 512188.5126187884,
+    "SHARES": 508428.675257,
+    "PPS": 1.0073950143742145,
+    "VAULT_PNL_SPOT": 3531.8018220000085,
+    "FUEL": 920978
+  },
+  "2025-03-17 09:30": {
+    "LTVL": 594185.349487,
+    "TVL_USD": 512438.990812,
+    "TVL_TOKEN": 512484.21241890383,
+    "SHARES": 508428.675257,
+    "PPS": 1.0079766098162222,
+    "VAULT_PNL_SPOT": 3531.8018220000085,
+    "FUEL": 920978
+  },
+  "2025-03-17 09:40": {
+    "LTVL": 593992.754137,
+    "TVL_USD": 512587.61991600005,
+    "TVL_TOKEN": 512638.15578539734,
+    "SHARES": 508428.675257,
+    "PPS": 1.0082793924364504,
+    "VAULT_PNL_SPOT": 3380.222039999964,
+    "FUEL": 920978
+  },
+  "2025-03-17 09:50": {
+    "LTVL": 594292.337722,
+    "TVL_USD": 512418.554797,
+    "TVL_TOKEN": 512458.86481130606,
+    "SHARES": 508428.675257,
+    "PPS": 1.007926755020788,
+    "VAULT_PNL_SPOT": 3380.222039999964,
+    "FUEL": 920978
+  },
+  "2025-03-17 10:00": {
+    "LTVL": 594424.096343,
+    "TVL_USD": 512179.72544,
+    "TVL_TOKEN": 512211.11373704986,
+    "SHARES": 508428.675257,
+    "PPS": 1.0074394672529787,
+    "VAULT_PNL_SPOT": 3380.222039999964,
+    "FUEL": 920978
   }
 }
