Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47835,5 +47835,41 @@
     "PPS": 1.0074394672529787,
     "VAULT_PNL_SPOT": 3380.222039999964,
     "FUEL": 920978
+  },
+  "2025-03-17 10:10": {
+    "LTVL": 593993.343643,
+    "TVL_USD": 512447.937834,
+    "TVL_TOKEN": 512480.065209288,
+    "SHARES": 508428.675257,
+    "PPS": 1.00796845290097,
+    "VAULT_PNL_SPOT": 3756.0973809999996,
+    "FUEL": 920978
+  },
+  "2025-03-17 10:20": {
+    "LTVL": 593869.971643,
+    "TVL_USD": 512061.27857799997,
+    "TVL_TOKEN": 512088.8699263116,
+    "SHARES": 508428.675257,
+    "PPS": 1.0071990327206888,
+    "VAULT_PNL_SPOT": 3756.0973809999996,
+    "FUEL": 920978
+  },
+  "2025-03-17 10:30": {
+    "LTVL": 594348.294797,
+    "TVL_USD": 512525.600904,
+    "TVL_TOKEN": 512569.86643766554,
+    "SHARES": 508428.675257,
+    "PPS": 1.0081450779277392,
+    "VAULT_PNL_SPOT": 3756.0973809999996,
+    "FUEL": 920978
+  },
+  "2025-03-17 10:40": {
+    "LTVL": 594505.826441,
+    "TVL_USD": 512322.07446100004,
+    "TVL_TOKEN": 512366.6964765962,
+    "SHARES": 508428.675257,
+    "PPS": 1.0077454742646166,
+    "VAULT_PNL_SPOT": 3746.368260999967,
+    "FUEL": 920978
   }
 }
