Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47871,5 +47871,41 @@
     "PPS": 1.0077454742646166,
     "VAULT_PNL_SPOT": 3746.368260999967,
     "FUEL": 920978
+  },
+  "2025-03-17 10:50": {
+    "LTVL": 594675.73295,
+    "TVL_USD": 512419.394177,
+    "TVL_TOKEN": 512468.58603657363,
+    "SHARES": 508428.675257,
+    "PPS": 1.0079458751564938,
+    "VAULT_PNL_SPOT": 3746.368260999967,
+    "FUEL": 920978
+  },
+  "2025-03-17 11:00": {
+    "LTVL": 593697.738888,
+    "TVL_USD": 512070.86540899996,
+    "TVL_TOKEN": 512116.74594826944,
+    "SHARES": 508428.675257,
+    "PPS": 1.0072538605132868,
+    "VAULT_PNL_SPOT": 3746.368260999967,
+    "FUEL": 920978
+  },
+  "2025-03-17 11:10": {
+    "LTVL": 593170.70917,
+    "TVL_USD": 512362.78724100004,
+    "TVL_TOKEN": 512417.00608441385,
+    "SHARES": 508428.675257,
+    "PPS": 1.0078444254258432,
+    "VAULT_PNL_SPOT": 3522.8477009999915,
+    "FUEL": 920978
+  },
+  "2025-03-17 11:20": {
+    "LTVL": 594272.443932,
+    "TVL_USD": 511857.452256,
+    "TVL_TOKEN": 511899.24371025653,
+    "SHARES": 508428.675257,
+    "PPS": 1.0068260674941323,
+    "VAULT_PNL_SPOT": 3522.8477009999915,
+    "FUEL": 920978
   }
 }
