Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -47907,5 +47907,113 @@
     "PPS": 1.0068260674941323,
     "VAULT_PNL_SPOT": 3522.8477009999915,
     "FUEL": 920978
+  },
+  "2025-03-17 11:30": {
+    "LTVL": 594845.262873,
+    "TVL_USD": 512492.79239200003,
+    "TVL_TOKEN": 512521.4884701395,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080499260020506,
+    "VAULT_PNL_SPOT": 3522.8477009999915,
+    "FUEL": 920978
+  },
+  "2025-03-17 11:40": {
+    "LTVL": 594969.651872,
+    "TVL_USD": 512475.343323,
+    "TVL_TOKEN": 512514.51993290364,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080362199748831,
+    "VAULT_PNL_SPOT": 3719.2453240000177,
+    "FUEL": 920978
+  },
+  "2025-03-17 11:50": {
+    "LTVL": 594541.85147,
+    "TVL_USD": 512469.17637799995,
+    "TVL_TOKEN": 512528.9628815201,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080646270048546,
+    "VAULT_PNL_SPOT": 3719.2453240000177,
+    "FUEL": 920978
+  },
+  "2025-03-17 12:00": {
+    "LTVL": 594497.130032,
+    "TVL_USD": 512547.120996,
+    "TVL_TOKEN": 512606.42955990013,
+    "SHARES": 508428.675257,
+    "PPS": 1.0082169918932844,
+    "VAULT_PNL_SPOT": 3719.2453240000177,
+    "FUEL": 920978
+  },
+  "2025-03-17 12:10": {
+    "LTVL": 594480.15829,
+    "TVL_USD": 511765.78187,
+    "TVL_TOKEN": 511828.7316857101,
+    "SHARES": 508428.675257,
+    "PPS": 1.0066873813263806,
+    "VAULT_PNL_SPOT": 3357.737454999995,
+    "FUEL": 920978
+  },
+  "2025-03-17 12:20": {
+    "LTVL": 592483.341694,
+    "TVL_USD": 512132.16711,
+    "TVL_TOKEN": 512191.1664104588,
+    "SHARES": 508428.675257,
+    "PPS": 1.0074002339690162,
+    "VAULT_PNL_SPOT": 3357.737454999995,
+    "FUEL": 920978
+  },
+  "2025-03-17 12:30": {
+    "LTVL": 593369.868537,
+    "TVL_USD": 512395.078927,
+    "TVL_TOKEN": 512444.8731953284,
+    "SHARES": 508428.675257,
+    "PPS": 1.0078992356918073,
+    "VAULT_PNL_SPOT": 3357.737454999995,
+    "FUEL": 920978
+  },
+  "2025-03-17 12:40": {
+    "LTVL": 592909.321142,
+    "TVL_USD": 512480.499879,
+    "TVL_TOKEN": 512543.1377758676,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080925068138373,
+    "VAULT_PNL_SPOT": 3046.1770549999783,
+    "FUEL": 920978
+  },
+  "2025-03-17 12:50": {
+    "LTVL": 591532.545958,
+    "TVL_USD": 512491.573931,
+    "TVL_TOKEN": 512555.64338642335,
+    "SHARES": 508428.675257,
+    "PPS": 1.0081171034016467,
+    "VAULT_PNL_SPOT": 3046.1770549999783,
+    "FUEL": 920978
+  },
+  "2025-03-17 13:00": {
+    "LTVL": 590556.385563,
+    "TVL_USD": 512344.157219,
+    "TVL_TOKEN": 512393.52633526234,
+    "SHARES": 508428.675257,
+    "PPS": 1.0077982444169935,
+    "VAULT_PNL_SPOT": 3046.1770549999783,
+    "FUEL": 920978
+  },
+  "2025-03-17 13:10": {
+    "LTVL": 590783.186576,
+    "TVL_USD": 512190.974847,
+    "TVL_TOKEN": 512231.78435325937,
+    "SHARES": 508428.675257,
+    "PPS": 1.007480123134945,
+    "VAULT_PNL_SPOT": 3625.988245000015,
+    "FUEL": 920978
+  },
+  "2025-03-17 13:20": {
+    "LTVL": 590999.765773,
+    "TVL_USD": 512273.512483,
+    "TVL_TOKEN": 512319.6212489124,
+    "SHARES": 508428.675257,
+    "PPS": 1.0076528846252537,
+    "VAULT_PNL_SPOT": 3625.988245000015,
+    "FUEL": 920978
   }
 }
