Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48015,5 +48015,104 @@
     "PPS": 1.0076528846252537,
     "VAULT_PNL_SPOT": 3625.988245000015,
     "FUEL": 920978
+  },
+  "2025-03-17 13:30": {
+    "LTVL": 590006.077558,
+    "TVL_USD": 512566.778419,
+    "TVL_TOKEN": 512612.7444037907,
+    "SHARES": 508428.675257,
+    "PPS": 1.0082294122074758,
+    "VAULT_PNL_SPOT": 3625.988245000015,
+    "FUEL": 920978
+  },
+  "2025-03-17 13:40": {
+    "LTVL": 592900.117912,
+    "TVL_USD": 512135.144999,
+    "TVL_TOKEN": 512206.8539585542,
+    "SHARES": 508428.675257,
+    "PPS": 1.0074310889322764,
+    "VAULT_PNL_SPOT": 3916.816822999972,
+    "FUEL": 920978
+  },
+  "2025-03-17 13:50": {
+    "LTVL": 589884.29923,
+    "TVL_USD": 512780.365615,
+    "TVL_TOKEN": 512821.3913263061,
+    "SHARES": 508428.675257,
+    "PPS": 1.0086397882005487,
+    "VAULT_PNL_SPOT": 3916.816822999972,
+    "FUEL": 920978
+  },
+  "2025-03-17 14:00": {
+    "LTVL": 590090.608942,
+    "TVL_USD": 512275.57463,
+    "TVL_TOKEN": 512323.7535557844,
+    "SHARES": 508428.675257,
+    "PPS": 1.0076610122291303,
+    "VAULT_PNL_SPOT": 3916.816822999972,
+    "FUEL": 920978
+  },
+  "2025-03-17 14:10": {
+    "LTVL": 588173.483741,
+    "TVL_USD": 511877.273942,
+    "TVL_TOKEN": 511931.5540446754,
+    "SHARES": 508428.675257,
+    "PPS": 1.0068896168885533,
+    "VAULT_PNL_SPOT": 3966.833003000007,
+    "FUEL": 920978
+  },
+  "2025-03-17 14:20": {
+    "LTVL": 588444.747191,
+    "TVL_USD": 511806.40332599997,
+    "TVL_TOKEN": 511872.14306533383,
+    "SHARES": 508428.675257,
+    "PPS": 1.0067727647473723,
+    "VAULT_PNL_SPOT": 3966.833003000007,
+    "FUEL": 920978
+  },
+  "2025-03-17 14:30": {
+    "LTVL": 588923.597882,
+    "TVL_USD": 512353.039299,
+    "TVL_TOKEN": 512429.78590803547,
+    "SHARES": 508428.675257,
+    "PPS": 1.0078695613480355,
+    "VAULT_PNL_SPOT": 3966.833003000007,
+    "FUEL": 920978
+  },
+  "2025-03-17 14:40": {
+    "LTVL": 590341.835535,
+    "TVL_USD": 511910.10004700004,
+    "TVL_TOKEN": 511974.0968091012,
+    "SHARES": 508428.675257,
+    "PPS": 1.0069732918787655,
+    "VAULT_PNL_SPOT": 3030.7603699999745,
+    "FUEL": 920978
+  },
+  "2025-03-17 14:50": {
+    "LTVL": 591094.274332,
+    "TVL_USD": 512251.643231,
+    "TVL_TOKEN": 512302.88888897555,
+    "SHARES": 508428.675257,
+    "PPS": 1.0076199746798649,
+    "VAULT_PNL_SPOT": 3030.7603699999745,
+    "FUEL": 920978
+  },
+  "2025-03-17 15:00": {
+    "LTVL": 588340.518989,
+    "TVL_USD": 511858.61958,
+    "TVL_TOKEN": 511917.75631921,
+    "SHARES": 508428.675257,
+    "PPS": 1.0068624789120053,
+    "VAULT_PNL_SPOT": 3030.7603699999745,
+    "FUEL": 920978
+  },
+  "2025-03-17 15:10": {
+    "LTVL": 588050.991967,
+    "TVL_USD": 511596.216812,
+    "TVL_TOKEN": 511649.9400557059,
+    "SHARES": 508428.675257,
+    "PPS": 1.0063357260427486,
+    "VAULT_PNL_SPOT": 3809.010643510963,
+    "FUEL": 920978
   }
 }
