Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48114,5 +48114,77 @@
     "PPS": 1.0063357260427486,
     "VAULT_PNL_SPOT": 3809.010643510963,
     "FUEL": 920978
+  },
+  "2025-03-17 15:20": {
+    "LTVL": 591010.000361,
+    "TVL_USD": 511973.904062,
+    "TVL_TOKEN": 512036.5927020445,
+    "SHARES": 508428.675257,
+    "PPS": 1.007096211564426,
+    "VAULT_PNL_SPOT": 3809.010643510963,
+    "FUEL": 920978
+  },
+  "2025-03-17 15:30": {
+    "LTVL": 590677.004006,
+    "TVL_USD": 512285.76321199996,
+    "TVL_TOKEN": 512342.53076440864,
+    "SHARES": 508428.675257,
+    "PPS": 1.0076979440733358,
+    "VAULT_PNL_SPOT": 3809.010643510963,
+    "FUEL": 920978
+  },
+  "2025-03-17 15:40": {
+    "LTVL": 590165.20929,
+    "TVL_USD": 512057.228316,
+    "TVL_TOKEN": 512117.43796318135,
+    "SHARES": 508428.675257,
+    "PPS": 1.0072552215988146,
+    "VAULT_PNL_SPOT": 3715.0935479999753,
+    "FUEL": 920978
+  },
+  "2025-03-17 15:50": {
+    "LTVL": 590315.805099,
+    "TVL_USD": 511770.737695,
+    "TVL_TOKEN": 511821.9198869887,
+    "SHARES": 508428.675257,
+    "PPS": 1.0066739835794538,
+    "VAULT_PNL_SPOT": 3715.0935479999753,
+    "FUEL": 920978
+  },
+  "2025-03-17 16:00": {
+    "LTVL": 591217.514509,
+    "TVL_USD": 511647.33319900004,
+    "TVL_TOKEN": 511705.7648802917,
+    "SHARES": 508428.675257,
+    "PPS": 1.0064455247761845,
+    "VAULT_PNL_SPOT": 3715.0935479999753,
+    "FUEL": 920978
+  },
+  "2025-03-17 16:10": {
+    "LTVL": 592835.133984,
+    "TVL_USD": 512388.95466700004,
+    "TVL_TOKEN": 512462.06250483694,
+    "SHARES": 508428.675257,
+    "PPS": 1.007933044385819,
+    "VAULT_PNL_SPOT": 4026.54938099999,
+    "FUEL": 920978
+  },
+  "2025-03-17 16:20": {
+    "LTVL": 592551.75467,
+    "TVL_USD": 511999.667381,
+    "TVL_TOKEN": 512065.4831575503,
+    "SHARES": 508428.675257,
+    "PPS": 1.007153034589782,
+    "VAULT_PNL_SPOT": 4026.54938099999,
+    "FUEL": 920978
+  },
+  "2025-03-17 16:30": {
+    "LTVL": 591656.16125,
+    "TVL_USD": 511905.52152,
+    "TVL_TOKEN": 511968.503885348,
+    "SHARES": 508428.675257,
+    "PPS": 1.006962291469022,
+    "VAULT_PNL_SPOT": 4026.54938099999,
+    "FUEL": 920978
   }
 }
