Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48186,5 +48186,50 @@
     "PPS": 1.006962291469022,
     "VAULT_PNL_SPOT": 4026.54938099999,
     "FUEL": 920978
+  },
+  "2025-03-17 16:40": {
+    "LTVL": 590691.69882,
+    "TVL_USD": 511961.77548899996,
+    "TVL_TOKEN": 512015.21963762573,
+    "SHARES": 508428.675257,
+    "PPS": 1.007054174076261,
+    "VAULT_PNL_SPOT": 3144.766133999976,
+    "FUEL": 920978
+  },
+  "2025-03-17 16:50": {
+    "LTVL": 590301.28678,
+    "TVL_USD": 511623.694356,
+    "TVL_TOKEN": 511664.1158211499,
+    "SHARES": 508428.675257,
+    "PPS": 1.0063636075650424,
+    "VAULT_PNL_SPOT": 3144.766133999976,
+    "FUEL": 920978
+  },
+  "2025-03-17 17:00": {
+    "LTVL": 590137.381794,
+    "TVL_USD": 512112.60594,
+    "TVL_TOKEN": 512150.00313322875,
+    "SHARES": 508428.675257,
+    "PPS": 1.0073192722152182,
+    "VAULT_PNL_SPOT": 3144.766133999976,
+    "FUEL": 920978
+  },
+  "2025-03-17 17:10": {
+    "LTVL": 592126.452182,
+    "TVL_USD": 512124.219379,
+    "TVL_TOKEN": 512161.61229831394,
+    "SHARES": 508428.675257,
+    "PPS": 1.0073421056344374,
+    "VAULT_PNL_SPOT": 2631.7613509999937,
+    "FUEL": 920978
+  },
+  "2025-03-17 17:20": {
+    "LTVL": 592667.299546,
+    "TVL_USD": 512450.837241,
+    "TVL_TOKEN": 512499.67846035725,
+    "SHARES": 508428.675257,
+    "PPS": 1.0080070291104242,
+    "VAULT_PNL_SPOT": 2631.7613509999937,
+    "FUEL": 920978
   }
 }
