Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -48231,5 +48231,41 @@
     "PPS": 1.0080070291104242,
     "VAULT_PNL_SPOT": 2631.7613509999937,
     "FUEL": 920978
+  },
+  "2025-03-17 17:30": {
+    "LTVL": 593159.105073,
+    "TVL_USD": 512592.628119,
+    "TVL_TOKEN": 512637.7453669698,
+    "SHARES": 508428.675257,
+    "PPS": 1.0082785852073395,
+    "VAULT_PNL_SPOT": 2631.7613509999937,
+    "FUEL": 920978
+  },
+  "2025-03-17 17:40": {
+    "LTVL": 592767.881072,
+    "TVL_USD": 511720.450563,
+    "TVL_TOKEN": 511761.7190280224,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065555778681003,
+    "VAULT_PNL_SPOT": 3460.9802899999777,
+    "FUEL": 920978
+  },
+  "2025-03-17 17:50": {
+    "LTVL": 594272.251787,
+    "TVL_USD": 511754.020478,
+    "TVL_TOKEN": 511771.952967232,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065757064322582,
+    "VAULT_PNL_SPOT": 3460.9802899999777,
+    "FUEL": 920978
+  },
+  "2025-03-17 18:00": {
+    "LTVL": 594348.390254,
+    "TVL_USD": 511727.166783,
+    "TVL_TOKEN": 511769.13185181184,
+    "SHARES": 508428.675257,
+    "PPS": 1.0065701577377069,
+    "VAULT_PNL_SPOT": 3460.9802899999777,
+    "FUEL": 920978
   }
 }
